--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=emazon-transacciones
+server.port=8084
+spring.datasource.url=jdbc:mysql://localhost:3306/transactions_db
+spring.datasource.username=root
+spring.datasource.password=sasa
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
